feat: mature organizer household management
